[AJ] - sidebar fixed for tab view

--- a/Components/dashboard2.html
+++ b/Components/dashboard2.html
@@ -69,7 +69,7 @@
         </div>
     </nav>
     <div class="flex">
-        <div class="hidden md:flex w-[300px] custom-shadow pr-5">
+        <div class="hidden lg:flex w-[300px] custom-shadow pr-5">
             <div class="">
                 <div>
                     <ul class="pt-10 flex flex-col gap-2">
@@ -109,23 +109,39 @@
                 </div>
             </div>
         </div>
-        <div id="sidebarSmall" class=" fixed top-16 h-screen w-1/2 bg-gray-200 hidden lg:hidden">
+        <div id="sidebarSmall" class=" fixed top-16 h-screen w-1/2 md:w-2/5 bg-gray-200 hidden lg:hidden">
             <div>
-                <ul>
-                    <li class="current active">
+                <ul class="pt-10 flex flex-col gap-2">
+                    <li
+                        class="flex gap-2 items-center hover:text-pink-500 hover:border-l-4 hover:border-pink-500 hover:pl-3 pl-4 font-medium py-2 text-[18px]">
                         <i class="ri-home-4-fill"></i><a href="./dashboard.html">Reports</a>
                     </li>
-                    <li>
+                    <li
+                        class="flex gap-2 items-center hover:text-pink-500 hover:border-l-4 hover:border-pink-800 hover:pl-3 pl-4 font-medium py-2 text-[18px]">
                         <i class="ri-image-2-fill"></i><a href="./files_event.html">Files</a>
                     </li>
-                    <li><i class="ri-calendar-2-line"></i><a href="#">Events</a></li>
-                    <li>
+                    <li
+                        class="flex gap-2 items-center hover:text-pink-500 hover:border-l-4 hover:border-pink-800 hover:pl-3 pl-4 font-medium py-2 text-[18px]">
+                        <i class="ri-calendar-2-line"></i><a href="#">Events</a>
+                    </li>
+                    <li
+                        class="flex gap-2 items-center hover:text-pink-500 hover:border-l-4 hover:border-pink-800 hover:pl-3 pl-4 font-medium py-2 text-[18px]">
                         <i class="ri-team-fill"></i><a href="#">Customer Accounts</a>
                     </li>
-                    <li><i class="ri-user-5-fill"></i><a href="#">Staff</a></li>
-                    <li><i class="ri-user-3-fill"></i><a href="#">Producers</a></li>
-                    <li><i class="ri-list-unordered"></i><a href="#">Orders</a></li>
-                    <li>
+                    <li
+                        class="flex gap-2 items-center hover:text-pink-500 hover:border-l-4 hover:border-pink-800 hover:pl-3 pl-4 font-medium py-2 text-[18px]">
+                        <i class="ri-user-5-fill"></i><a href="#">Staff</a>
+                    </li>
+                    <li
+                        class="flex gap-2 items-center hover:text-pink-500 hover:border-l-4 hover:border-pink-800 hover:pl-3 pl-4 font-medium py-2 text-[18px]">
+                        <i class="ri-user-3-fill"></i><a href="#">Producers</a>
+                    </li>
+                    <li
+                        class="flex gap-2 items-center hover:text-pink-500 hover:border-l-4 hover:border-pink-800 hover:pl-3 pl-4 font-medium py-2 text-[18px]">
+                        <i class="ri-list-unordered"></i><a href="#">Orders</a>
+                    </li>
+                    <li
+                        class="flex gap-2 items-center hover:text-pink-500 hover:border-l-4 hover:border-pink-800 hover:pl-3 pl-4 font-medium py-2 text-[18px] font-medium">
                         <i class="ri-chat-new-fill"></i><a href="#">Zendesk Chat</a>
                     </li>
                 </ul>
