--- a/Resources/css/dashboard.css
+++ b/Resources/css/dashboard.css
@@ -182,6 +182,7 @@ body {
 .dashboard-content {
   padding: 20px 40px;
   height: 100vh;
+  margin-left: 320px;
 }
 .dashboard-content h2 {
   margin-bottom: 10px;
