--- a/Components/dashboard2.html
+++ b/Components/dashboard2.html
@@ -138,11 +138,11 @@ window.onclick = function(event) {
                     <ul class="pt-10 flex flex-col gap-2">
                         <li
                             class="flex gap-2 items-center hover:text-pink-500 hover:border-l-4 hover:border-pink-500 hover:pl-3 pl-4 font-medium py-2 text-[18px] active">
-                            <i class="ri-home-4-fill"></i><a href="./dashboard.html">Reports</a>
+                            <i class="ri-home-4-fill"></i><a href="./dashboard2.html">Reports</a>
                         </li>
                         <li
                             class="flex gap-2 items-center hover:text-pink-500 hover:border-l-4 hover:border-pink-800 hover:pl-3 pl-4 font-medium py-2 text-[18px]">
-                            <i class="ri-image-2-fill"></i><a href="./files_event.html">Files</a>
+                            <i class="ri-image-2-fill"></i><a href="./files_event2.html">Files</a>
                         </li>
                         <li
                             class="flex gap-2 items-center hover:text-pink-500 hover:border-l-4 hover:border-pink-800 hover:pl-3 pl-4 font-medium py-2 text-[18px]">
@@ -177,11 +177,11 @@ window.onclick = function(event) {
                 <ul class="pt-10 flex flex-col gap-2">
                     <li
                         class="flex gap-2 items-center hover:text-pink-500 hover:border-l-4 hover:border-pink-500 hover:pl-3 pl-4 font-medium py-2 text-[18px]">
-                        <i class="ri-home-4-fill"></i><a href="./dashboard.html">Reports</a>
+                        <i class="ri-home-4-fill"></i><a href="./dashboard2.html">Reports</a>
                     </li>
                     <li
                         class="flex gap-2 items-center hover:text-pink-500 hover:border-l-4 hover:border-pink-800 hover:pl-3 pl-4 font-medium py-2 text-[18px]">
-                        <i class="ri-image-2-fill"></i><a href="./files_event.html">Files</a>
+                        <i class="ri-image-2-fill"></i><a href="./files_event2.html">Files</a>
                     </li>
                     <li
                         class="flex gap-2 items-center hover:text-pink-500 hover:border-l-4 hover:border-pink-800 hover:pl-3 pl-4 font-medium py-2 text-[18px]">
